
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {struct TYPE_4__* data; } ;
typedef TYPE_1__ MEMPACKET ;


 int OPENSSL_free (TYPE_1__*) ;

__attribute__((used)) static void mempacket_free(MEMPACKET *pkt)
{
    if (pkt->data != ((void*)0))
        OPENSSL_free(pkt->data);
    OPENSSL_free(pkt);
}
